# Fast_NCC_Template_Matching

./: .gitignore  CMakeLists.txt  README.md  main.cpp  old.cpp
